repository 컨트롤러에서 제거