@@ -6,6 +6,7 @@ import com.moocafe.project.entity.*;
 import com.moocafe.project.repository.*;
 import com.moocafe.project.service.InventoryStoreService;
 import com.moocafe.project.service.InventorySummaryService;
+import com.moocafe.project.service.MemberStoreService;
 import com.moocafe.project.service.StoreService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
@@ -24,17 +25,12 @@ public class InventoryStoreController {
 
     private final InventoryStoreService inventoryStoreService;
     private final InventorySummaryService inventorySummaryService;
-    private final StoreRepository storeRepository;
-    private final MemberStoreRepository memberStoreRepository;
-    private final InventoryItemRepository inventoryItemRepository;
-    private final InventoryStoreRepository inventoryStoreRepository;
-    private final MenuRepository menuRepository;
-    private final SalesRepository salesRepository;
+    private final MemberStoreService memberStoreService;
     private final StoreService storeService;
 
     @GetMapping("/{storeId}")
     public String viewStoreInventory(@PathVariable Integer storeId, Model model) {
-        List<InventoryStore> inventory = inventoryStoreService.getInventoryByStore(storeId);
+        List<InventorySummaryPivotRowDto> inventory = inventorySummaryService.generateInventoryPivotByStoreId(storeId);
         model.addAttribute("inventoryList", inventory);
         model.addAttribute("storeId", storeId);
         return "headOffice/inventoryStore";  // storeInventory.html
@@ -50,22 +46,10 @@ public class InventoryStoreController {
 
     @GetMapping("/headOffice/summary")
     public String showInventorySummary(Model model) {
-        List<InventorySummaryDto> rawList = inventorySummaryService.getInventorySummary();
-
-        // itemCode + itemName 기준으로 Pivot 구성
-        Map<String, InventorySummaryPivotRowDto> pivotMap = new LinkedHashMap<>();
-
-        for (InventorySummaryDto dto : rawList) {
-            String key = dto.getItemCode() + "::" + dto.getItemName();
-            pivotMap.putIfAbsent(key, new InventorySummaryPivotRowDto());
-            InventorySummaryPivotRowDto row = pivotMap.get(key);
-
-            row.setItemCode(dto.getItemCode());
-            row.setItemName(dto.getItemName());
-            row.getStoreStockMap().put(dto.getStoreId(), dto.getTotalCount().intValue());
-        }
-        model.addAttribute("storeList", storeRepository.findAll());
-        model.addAttribute("pivotList", pivotMap.values());
+        List<Store> storeList = storeService.findAll();
+        List<InventorySummaryPivotRowDto> pivotList = inventorySummaryService.generateInventoryPivotForAllStores();
+        model.addAttribute("storeList", storeList);
+        model.addAttribute("pivotList", pivotList);
         return "headOffice/inventorySummary";
     }
 
@@ -75,41 +59,16 @@ public class InventoryStoreController {
         Role role = loginMember.getRole();
 
         if (role == Role.ROLE_ADMIN) {
-            // 관리자: 전체 매장 조회
-            List<InventorySummaryDto> rawList = inventorySummaryService.getInventorySummary();
-            Map<String, InventorySummaryPivotRowDto> pivotMap = new LinkedHashMap<>();
-
-            for (InventorySummaryDto dto : rawList) {
-                String key = dto.getItemCode() + "::" + dto.getItemName();
-                pivotMap.putIfAbsent(key, new InventorySummaryPivotRowDto());
-                InventorySummaryPivotRowDto row = pivotMap.get(key);
-                row.setItemCode(dto.getItemCode());
-                row.setItemName(dto.getItemName());
-                row.getStoreStockMap().put(dto.getStoreId(), dto.getTotalCount().intValue());
-            }
-
-            model.addAttribute("pivotList", pivotMap.values());
-            model.addAttribute("storeList", storeRepository.findAll());
+            List<InventorySummaryPivotRowDto> pivotList = inventorySummaryService.generateInventoryPivotForAllStores();
+            model.addAttribute("pivotList", pivotList);
+            model.addAttribute("storeList", storeService.findAll());
         } else {
-            // 일반 사용자 또는 매니저: 본인 매장만 조회
-            List<MemberStore> msList = memberStoreRepository.findByMemberId(loginMember.getId());
+            List<MemberStore> msList = memberStoreService.findByMemberId(loginMember.getId());
             if (!msList.isEmpty()) {
-                Store store = msList.get(0).getStore(); // 첫 번째 매장 기준
+                Store store = msList.get(0).getStore();
                 Integer storeId = store.getId();
-
-                List<InventorySummaryDto> rawList = inventorySummaryService.getInventorySummaryByStoreId(storeId);
-                Map<String, InventorySummaryPivotRowDto> pivotMap = new LinkedHashMap<>();
-
-                for (InventorySummaryDto dto : rawList) {
-                    String key = dto.getItemCode() + "::" + dto.getItemName();
-                    pivotMap.putIfAbsent(key, new InventorySummaryPivotRowDto());
-                    InventorySummaryPivotRowDto row = pivotMap.get(key);
-                    row.setItemCode(dto.getItemCode());
-                    row.setItemName(dto.getItemName());
-                    row.getStoreStockMap().put(dto.getStoreId(), dto.getTotalCount().intValue());
-                }
-
-                model.addAttribute("pivotList", pivotMap.values());
+                List<InventorySummaryPivotRowDto> pivotList = inventorySummaryService.generateInventoryPivotByStoreId(storeId);
+                model.addAttribute("pivotList", pivotList);
                 model.addAttribute("storeList", List.of(store));
             }
         }
@@ -118,45 +77,45 @@ public class InventoryStoreController {
     }
 
 
-    @GetMapping("/headOffice/inventoryPivot")
-    public String viewInventoryPivot(Model model) {
-        List<Store> storeList = storeRepository.findAll();
-        List<InventoryItem> itemList = inventoryItemRepository.findAll();
-        List<InventoryPivotDto> pivotList = new ArrayList<>();
-
-        LocalDate threeMonthsAgo = LocalDate.now().minusMonths(3);
-        Date startDate = java.sql.Date.valueOf(threeMonthsAgo);
-        Date endDate = java.sql.Date.valueOf(LocalDate.now());
-
-        for (InventoryItem item : itemList) {
-            InventoryPivotDto dto = new InventoryPivotDto(item.getItemCode(), item.getItemName());
-
-            for (Store store : storeList) {
-                int stock = inventoryStoreRepository.findQuantityByStoreIdAndItemCode(store.getId(), item.getItemCode());
-
-                // 메뉴에서 이 품목을 사용하는 메뉴들 찾기
-                List<Menu> menus = menuRepository.findByItemCode(item.getItemCode());
-                int totalExpectedUsage = 0;
-
-                for (Menu menu : menus) {
-                    Integer qtyUsed = menu.getQuantityUsed();
-                    int qtySold = salesRepository.sumQuantityByStoreIdAndMenuIdAndPeriod(
-                            store.getId(), menu.getMenuId(), startDate, endDate
-                    );
-                    totalExpectedUsage += qtySold * qtyUsed;
-                }
-
-                dto.putStock(store.getId(), stock);
-                dto.putExpectedUsage(store.getId(), totalExpectedUsage);
-            }
-
-            pivotList.add(dto);
-        }
-
-        model.addAttribute("storeList", storeList);
-        model.addAttribute("pivotList", pivotList);
-        return "headOffice/inventoryPivot";
-    }
+//    @GetMapping("/headOffice/inventoryPivot")
+//    public String viewInventoryPivot(Model model) {
+//        List<Store> storeList = storeRepository.findAll();
+//        List<InventoryItem> itemList = inventoryItemRepository.findAll();
+//        List<InventoryPivotDto> pivotList = new ArrayList<>();
+//
+//        LocalDate threeMonthsAgo = LocalDate.now().minusMonths(3);
+//        Date startDate = java.sql.Date.valueOf(threeMonthsAgo);
+//        Date endDate = java.sql.Date.valueOf(LocalDate.now());
+//
+//        for (InventoryItem item : itemList) {
+//            InventoryPivotDto dto = new InventoryPivotDto(item.getItemCode(), item.getItemName());
+//
+//            for (Store store : storeList) {
+//                int stock = inventoryStoreRepository.findQuantityByStoreIdAndItemCode(store.getId(), item.getItemCode());
+//
+//                // 메뉴에서 이 품목을 사용하는 메뉴들 찾기
+//                List<Menu> menus = menuRepository.findByItemCode(item.getItemCode());
+//                int totalExpectedUsage = 0;
+//
+//                for (Menu menu : menus) {
+//                    Integer qtyUsed = menu.getQuantityUsed();
+//                    int qtySold = salesRepository.sumQuantityByStoreIdAndMenuIdAndPeriod(
+//                            store.getId(), menu.getMenuId(), startDate, endDate
+//                    );
+//                    totalExpectedUsage += qtySold * qtyUsed;
+//                }
+//
+//                dto.putStock(store.getId(), stock);
+//                dto.putExpectedUsage(store.getId(), totalExpectedUsage);
+//            }
+//
+//            pivotList.add(dto);
+//        }
+//
+//        model.addAttribute("storeList", storeList);
+//        model.addAttribute("pivotList", pivotList);
+//        return "headOffice/inventoryPivot";
+//    }
 
     @GetMapping
     public String inventoryStorePage(
@@ -165,50 +124,19 @@ public class InventoryStoreController {
             @RequestParam(required = false) String storeName,
             Model model
     ) {
-        List<InventorySummaryDto> rawList = inventorySummaryService.getInventorySummary();
-        Map<String, InventorySummaryPivotRowDto> pivotMap = new LinkedHashMap<>();
-
-        // 🔽 3개월 예상 사용량 계산용 날짜 범위
-        LocalDate threeMonthsAgo = LocalDate.now().minusMonths(3);
-        Date startDate = java.sql.Date.valueOf(threeMonthsAgo);
-        Date endDate = java.sql.Date.valueOf(LocalDate.now());
-
-        for (InventorySummaryDto dto : rawList) {
-            String key = dto.getItemCode() + "::" + dto.getItemName();
-            pivotMap.putIfAbsent(key, new InventorySummaryPivotRowDto());
-            InventorySummaryPivotRowDto row = pivotMap.get(key);
-
-            row.setItemCode(dto.getItemCode());
-            row.setItemName(dto.getItemName());
-            row.getStoreStockMap().put(dto.getStoreId(), dto.getTotalCount().intValue());
-
-            // 🔽 예상 사용량 계산
-            List<Menu> menus = menuRepository.findByItemCode(dto.getItemCode());
-            int totalExpectedUsage = 0;
-            for (Menu menu : menus) {
-                int usedQty = menu.getQuantityUsed();
-                int soldQty = salesRepository.sumQuantityByStoreIdAndMenuIdAndPeriod(
-                        dto.getStoreId(), menu.getMenuId(), startDate, endDate
-                );
-                totalExpectedUsage += usedQty * soldQty;
-            }
-            row.putExpectedUsage(dto.getStoreId(), totalExpectedUsage);
-        }
-
-        List<InventorySummaryPivotRowDto> pivotList = new ArrayList<>(pivotMap.values());
-        List<Store> allStores = storeService.findAll();
-        List<Store> storeList = allStores;
+        List<Store> storeList = storeService.findAll();
+        List<InventorySummaryPivotRowDto> pivotList = inventorySummaryService.generateInventoryPivot(storeList);
 
         // 🔍 품목명 검색
         if ("itemName".equals(searchType) && itemName != null && !itemName.isBlank()) {
             pivotList = pivotList.stream()
                     .filter(row -> row.getItemName() != null && row.getItemName().contains(itemName))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         // 🔍 매장명 검색
         if ("storeName".equals(searchType) && storeName != null && !storeName.isBlank()) {
-            storeList = allStores.stream()
+            storeList = storeList.stream()
                     .filter(s -> s.getName() != null && s.getName().contains(storeName))
                     .toList();
 
@@ -218,7 +146,7 @@ public class InventoryStoreController {
 
             pivotList = pivotList.stream()
                     .filter(row -> matchedStoreIds.stream().anyMatch(id -> row.getStockByStoreId(id) > 0))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         model.addAttribute("pivotList", pivotList);
@@ -229,5 +157,4 @@ public class InventoryStoreController {
 
         return "headOffice/inventoryStore";
     }
-
 }
